# hitblow

./: hitblow.spec  pyproject.toml
setsumei/: AI用指示書コピペ.md  AI用指示書コピペ_1.md  strikeout_gui.py
src/hitblow/: cli.py  core.py  game.py  game_gui.py  main_entry.py  strikeout.py  strikeout_gui.py
