[project]
name = "hitblow"
version = "0.1.0"
description = "チームで育てる Hit & Blow ゲーム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

# 第3回でコメントを外す：`hitblow` コマンドが使えるようになる
[project.scripts]
hitblow = "hitblow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitblow"]
artifacts = ["src/hitblow/howtoplay/howtoplay.pdf",
"src/hitblow/howtoplay/ForJupyterHub.pdf",
"src/hitblow/font/GenShinGothic-Bold.ttf",]

[dependency-groups]
dev = ["pytest>=8"]
